updates for tomcat